# dashboard_Paradigm

./: .gitignore  DivergentBars.py  Prio_matrix.py  Quotes.py  README.md  Themes.py  config.py  dashboard.py  divergent_bars.py  kto_cards.py  kto_cards_backup.py  kto_nps_impact (1).ipynb  main.py  notebook.ipynb  pyproject.toml  quick_test_quotes.py  run_dashboard.py  test.py  test_quotes.py
.streamlit/: config.toml
docs/superpowers/plans/: 2026-04-08-theme-row-redesign.md
docs/superpowers/specs/: 2026-04-08-theme-row-redesign-design.md
pdf_reports/app/public/data/: immediator_paradigma.json
pdf_reports/app/src/components/: TopThemesEditorial.jsx
pdf_reports/app/src/pages/: TopThemesPage.jsx
pdf_reports/pipeline/: build_report_json.py
quotes/: __init__.py  llm_client.py  prompts.py  summarize.py
